--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,32 @@
 <resources>
     <string name="app_name">MP2021-2-9</string>
+
+    <!-- AddItem Activity -->
+    <string name="addItem_title">상품 등록하기</string>
+    <string name="item_name">상품 이름</string>
+    <string name="item_price">상품 가격</string>
+    <string name="booth_location">부스 위치</string>
+    <string name="item_description">상품 설명</string>
+
+    <!-- AddPromotion Activity -->
+    <string name="addPromotion_title">부스 홍보글 등록하기</string>
+    <string name="booth_name">부스 이름</string>
+
+    <!-- SeeProfile Activity -->
+    <string name="seeProfile_title">개인 정보 확인하기</string>
+    <string name="PW">비밀번호</string>
+    <string name="newPW">새로운 비밀 번호</string>
+    <string name="checkPW">비밀번호 재확인</string>
+    <string name="editBtn">수정</string>
+    <string name="notice">좌측에 부스 운영관련  서류를 올리세요! (저희가 직접 확인 후  이메일 보내드립니다!)</string>
+    <string name="registerAdminBtn">부스 관리자 등록</string>
+    <string name="withdraw"><u>탈퇴하기</u>></string>
+
+    <!-- Content Description -->
+    <string name="promotionBtn">부스 홍보 페이지로 이동</string>
+    <string name="shopBtn">상품 홍보 페이지로 이동</string>
+    <string name="profileBtn">개인 정보 페이지로 이동</string>
+    <string name="mapImage">부스 위치 이미지 등록</string>
+    <string name="camera">이미지 등록</string>
+
 </resources>
