--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="editBtn">수정</string>
     <string name="notice">좌측에 부스 운영관련  서류를 올리세요! (저희가 직접 확인 후  이메일 보내드립니다!)</string>
     <string name="registerAdminBtn">부스 관리자 등록</string>
-    <string name="withdraw"><u>탈퇴하기</u>></string>
+    <string name="withdraw"><u>탈퇴하기></u></string>
+    <string name="logout"><u>로그아웃></u></string>
 
     <!-- Content Description -->
     <string name="promotionBtn">부스 홍보 페이지로 이동</string>
